# weedmate

./: .gitignore  .weedrc  CMakeLists.txt  Makefile  README.md  build.sh  common.h  sources.cmake
code/: args.c  boot.c  common.h  data.c  functions.c  input.c  inputhandler.c  macros.h  main.c  savefile.c  signals.c  strain.c
code/include/: macros.h
code/include/weedmate/: args.h  common.h  macros.h  menu.h  terminal.h  version.h
code/input/: input.c  input.h
include/weedmate/: args.h  version.h
input/: input.c
src/: args.c  boot.c  menu.c  savefile.c  strain.c
